src/test/ui-fulldeps/pathless-extern-unstable.stderr
error[E0658]: use of unstable library feature 'rustc_private': this crate is being loaded from the sysroot, an unstable location; did you mean to load this crate from crates.io via `Cargo.toml` instead?
  --> $DIR/pathless-extern-unstable.rs:7:9
   |
LL | pub use rustc;
   |         ^^^^^
   |
   = note: for more information, see https://github.com/rust-lang/rust/issues/27812
   = help: add `#![feature(rustc_private)]` to the crate attributes to enable

error: aborting due to previous error

For more information about this error, try `rustc --explain E0658`.
